docs/platforms/winpack_dldt/2020.1/sub.md
# Subtree Keyword Index for `platforms/winpack_dldt/2020.1/`

## Scope

This keyword index covers **all files** under `platforms/winpack_dldt/2020.1/` recursively, including all subdirectories.

**Statistics:**
- **Total Files in Subtree**: 7
- **Total Unique Keywords**: 251
- **Direct Files**: 7
- **Subfolders**: 0

## Keywords A-Z

The following keywords, identifiers, and technical terms appear in files within this subtree:


### A

**ALIAS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ALL** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**APPEND** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**add** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**add_common_target** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**add_cpplint_target** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**add_custom_target** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**add_graph_transformer_target** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**add_library** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**add_subdirectory** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ade** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**always** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**and** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**applyPatch** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**are** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### B

**BUILD_SHARED_LIBS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**b5c53d09** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**bin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**binaries** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**build** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**build_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_config** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_debug** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_with_lto** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**builds** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**built** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### C

**CMAKE_BINARY_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**CMAKE_CURRENT_SO** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**CMAKE_CURRENT_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**CMAKE_CXX_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**CMAKE_DL_LIBS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**CMAKE_MODULE_PATH** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**CMAKE_SHARED_LINKER_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**CMakeLists** - Found in 4 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**CROSS_COMPILED_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**c0b7495** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**cache** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cd727fd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**check_features** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**clDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cldnn_global_custom_kernels** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cmake** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))

**common** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**config** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**copy_bin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copy_dll** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copytree** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cpp** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### D

**DEBUG** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**DEPENDS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**DIRECTORY** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**Debug** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**Developer** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**d5feedb** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**def** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**deployment_tools** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**developer** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**developer_package** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**diff** - Found in 5 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**directory** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**disable** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**disable_deprecated_warnings** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**disabled** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**dldt** - Found in 6 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**dll** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**dll_suffix** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**doc** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))


### E

**ENABLE_AVX2** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_AVX512F** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_NGRAPH** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_SSE42** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_TESTS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**EXCLUDE_FROM_ALL** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**Enable** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**e42ac19** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**e48cee5** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**e59edb2** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**e77296e** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ec22761** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**elf** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**else** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**endfunction** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**endif** - Found in 4 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**engine** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**etc** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**even** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**examples** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**external_gtest** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))

**external_json** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))


### F

**FALSE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**features** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**file** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**fix** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**fluid** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**for** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**format_reader** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**function** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### G

**GLOB_RECURSE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**gapi** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**gflags** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**git** - Found in 5 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**global** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**graph** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**graph_transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### H

**HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**HeteroPlugin** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**hpp** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### I

**ICF** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**IE_DEBUG_POSTFIX_WIN** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**INTEL_ITT_LIBS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**INTERFACE_INCLUDE_DIRECTORIES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ie_dev_targets** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ie_developer_export_targets** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**ie_python_api_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**include** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**index** - Found in 5 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**inference** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**inference_engine** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**inference_engine_nn_builder** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_nn_builderd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_preproc_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**inference_engined** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inside** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**install** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**intel64** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### J

**json** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### K

**kept** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### L

**LIB_DL** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**LICENSE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**lib** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**library** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**licenses** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**list** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**location** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))


### M

**MKLDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma2450** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma248x** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma2x8x** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**means** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**mkldnn_create_avx2_layers** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_create_avx512f_layers** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_create_sse42_layers** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx2** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx2_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx512** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_avx512_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_no_opt** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_no_opt_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_sse42** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_layers_sse42_s** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin_object_libraries** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**modules** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**msvs2019** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**must** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**mvcmd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**myriadPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### N

**NGRAPH_DOC_BUILD_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))

**NGRAPH_JSON_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))

**NGRAPH_LIBRARIES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**NGRAPH_ONNX_IMPORT_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))

**NN_BUILDER_LIBRARY_SRC** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**name** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ngraph** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**ngraphd** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**not** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### O

**OBJECT** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**OPT** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**OUTPUT_ROOT** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**OpenVINO** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**OpenVINO_MAIN_SOURCE_DIR** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**object** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**object_libraries** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**options** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))


### P

**PRIVATE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**package** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**patch** - Found in 6 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**pcie** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**pdb** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**platforms** - Found in 7 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**plugins** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**postfixes** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**prepare_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**preprocessing** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**project** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**pugixml** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### R

**REF** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))

**Release** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**required** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**rm_one** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### S

**SAMPLES_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**SET** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**STATIC** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**Static** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**sample** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**sample_cpplint** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**samples** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**self** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**set** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**set_ie_threading_interface_for** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**shared** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**src** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**srcdir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**stb_lib** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**support** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**sysroot** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_lib_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_license_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysrootdir** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### T

**TARGET_NAME** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**TARGET_OBJECTS** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**TARGET_PROPERTY** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**TRUE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**These** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))

**target_compile_definitions** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**target_include_directories** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**target_link_libraries** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**targets** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**tbb** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**temp** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**test** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**tests** - Found in 3 files:
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**they** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**thirdparty** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**tools** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**txt** - Found in 4 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### U

**UNIX** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))

**USE_STATIC_IE** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**Unit** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**unit** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**unused** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**usb** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**used** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### V

**v16** - Found in 2 files:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**vpu** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib_test_static** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**vpu_graph_transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**vpu_graph_transformer_test_static** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))


### W

**WIN32** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**which** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**winpack_dldt** - Found in 7 files:
  - [platforms/winpack_dldt/2020.1/20200318-dldt-pdb.patch](20200318-dldt-pdb.patch_docs.md) ([keywords](20200318-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-fix-binaries-location.patch](20200313-dldt-fix-binaries-location.patch_docs.md) ([keywords](20200313-dldt-fix-binaries-location.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-ngraph-disable-tests-examples.patch](20200313-ngraph-disable-tests-examples.patch_docs.md) ([keywords](20200313-ngraph-disable-tests-examples.patch_kw.md))
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**with** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200319-dldt-fix-msvs2019-v16.5.0.patch](20200319-dldt-fix-msvs2019-v16.5.0.patch_docs.md) ([keywords](20200319-dldt-fix-msvs2019-v16.5.0.patch_kw.md))


### X

**xml** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### _

**_nn_builder** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))

**_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2020.1/20200313-dldt-disable-unused-targets.patch](20200313-dldt-disable-unused-targets.patch_docs.md) ([keywords](20200313-dldt-disable-unused-targets.patch_kw.md))



## Folder-Level Navigation

### Keyword Distribution by Subfolder



### Most Common Keywords

The most frequently appearing keywords in this subtree:

- **platforms**: 7 occurrences
- **winpack_dldt**: 7 occurrences
- **dldt**: 6 occurrences
- **patch**: 6 occurrences
- **git**: 5 occurrences
- **diff**: 5 occurrences
- **index**: 5 occurrences
- **endif**: 4 occurrences
- **txt**: 4 occurrences
- **CMakeLists**: 4 occurrences
- **pdb**: 3 occurrences
- **cmake**: 3 occurrences
- **set**: 3 occurrences
- **fix**: 3 occurrences
- **include**: 3 occurrences
- **ngraph**: 3 occurrences
- **disable**: 3 occurrences
- **tests**: 3 occurrences
- **OpenVINO_MAIN_SOURCE_DIR**: 2 occurrences
- **developer_package**: 2 occurrences
- **Debug**: 2 occurrences
- **Release**: 2 occurrences
- **location**: 2 occurrences
- **for**: 2 occurrences
- **binaries**: 2 occurrences
- **package**: 2 occurrences
- **plugins**: 2 occurrences
- **msvs2019**: 2 occurrences
- **v16**: 2 occurrences
- **are**: 2 occurrences
- **examples**: 2 occurrences
- **add_subdirectory**: 2 occurrences
- **src**: 2 occurrences
- **test**: 2 occurrences
- **else**: 2 occurrences
- **inference**: 2 occurrences
- **config**: 2 occurrences
- **engine**: 2 occurrences
- **HeteroPlugin**: 2 occurrences
- **install**: 2 occurrences
- **inference_engine**: 2 occurrences
- **unused**: 2 occurrences
- **targets**: 2 occurrences
- **CMAKE_CURRENT_SOURCE_DIR**: 1 occurrences
- **REF**: 1 occurrences
- **DEBUG**: 1 occurrences
- **CMAKE_MODULE_PATH**: 1 occurrences
- **OPT**: 1 occurrences
- **project**: 1 occurrences
- **OpenVINO**: 1 occurrences
- **ICF**: 1 occurrences
- **CMAKE_CXX_FLAGS_RELEASE**: 1 occurrences
- **CMAKE_SHARED_LINKER_FLAGS_RELEASE**: 1 occurrences
- **e48cee5**: 1 occurrences
- **CMAKE_DL_LIBS**: 1 occurrences
- **Enable**: 1 occurrences
- **builds**: 1 occurrences
- **e42ac19**: 1 occurrences
- **CMAKE_BINARY_DIR**: 1 occurrences
- **OUTPUT_ROOT**: 1 occurrences
- **UNIX**: 1 occurrences
- **e59edb2**: 1 occurrences
- **postfixes**: 1 occurrences
- **LIB_DL**: 1 occurrences
- **IE_DEBUG_POSTFIX_WIN**: 1 occurrences
- **SET**: 1 occurrences
- **shared**: 1 occurrences
- **with**: 1 occurrences
- **disable_deprecated_warnings**: 1 occurrences
- **b5c53d09**: 1 occurrences
- **check_features**: 1 occurrences
- **means**: 1 occurrences
- **These**: 1 occurrences
- **developer**: 1 occurrences
- **features**: 1 occurrences
- **options**: 1 occurrences
- **doc**: 1 occurrences
- **NGRAPH_JSON_ENABLE**: 1 occurrences
- **external_gtest**: 1 occurrences
- **NGRAPH_ONNX_IMPORT_ENABLE**: 1 occurrences
- **NGRAPH_DOC_BUILD_ENABLE**: 1 occurrences
- **external_json**: 1 occurrences
- **inference_engine_nn_builderd**: 1 occurrences
- **rm_one**: 1 occurrences
- **pcie**: 1 occurrences
- **sysroot_bin_dir**: 1 occurrences
- **sysroot_ie_dir**: 1 occurrences
- **dll**: 1 occurrences
- **cldnn_global_custom_kernels**: 1 occurrences
- **prepare_dir**: 1 occurrences
- **myriadPlugin**: 1 occurrences
- **temp**: 1 occurrences
- **copy_bin**: 1 occurrences
- **def**: 1 occurrences
- **tbb**: 1 occurrences
- **xml**: 1 occurrences
- **MKLDNNPlugin**: 1 occurrences
- **build_bin_dir**: 1 occurrences
- **build_dir**: 1 occurrences
- **build_config**: 1 occurrences
